--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,5 +1,4 @@
 
-
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@customer) do |f| %>
@@ -11,7 +10,9 @@
   <% end%>
 </ul>
 <% end%>
- 
+     <%= f.label :code %>
+     <%= f.text_field :code %>
+
      <%= f.label :first_name %>
      <%= f.text_field :first_name %>
 
