--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,9 +1,67 @@
 
-<h1><%= link_to "Customers", customers_path %></h1>
-<br> </br>
-<h3><span class = "customer"><%= @customer.code %></span></h3>
-<h4><%= "#{@customer.first_name} #{@customer.last_name}" %></h4>
-<h4> <%= "Age of the customer: #{Date.today.year - @customer.date_of_birth.year}" %></h4> 
-  
-<h5><%= link_to"Back", customers_path, class: "btn btn-info" %></h5>
+<h1><%= link_to "Customers", customers_path %></h1>  
 
+<br> </br>
+    <div class = "span6 offset6">
+      <%= link_to"Edit", edit_customer_path, class: "btn btn-info" %>
+      <%= link_to "Delete",customer_path,class: "btn btn-danger",
+      method: :delete, confirm: "Are You Sure?" %>
+    </div>
+
+<h3><span class = "customer"><%= @customer.code %></span></h3>
+<h5><%= "#{@customer.first_name} #{@customer.last_name}" %></h5>
+<h5><%= "Age of the customer: #{Date.today.year - @customer.date_of_birth.year}" %></h5> 
+<h5><%= @customer.address %></h5>
+
+<hr>
+   <div class="row">
+   <div class="span6 customer_left_span_properties">
+   <h4><span class="customer">Application details</span></h4>
+   <div class="row">
+   <div class="span3">
+   <strong>status</strong>
+   </div>
+   <div class="span3"> - <%= @customer.status %> </div>
+   </div>
+   </div>
+   </div>
+</hr>
+
+<hr>
+   <div class="row">
+   <div class="span6 customer_left_span_properties">
+   <h4><span class="customer">customer details</span></h4>
+   <div class="row">
+   <div class="span3">
+    <strong>date of birth</strong>
+   </div>
+   <div class="span3"> - <%= @customer.date_of_birth %> </div>
+   </div>
+
+   <div class="row">
+   <div class="span3">
+   <strong>gender</strong>
+   </div>
+   <div class="span3"> - <%= @customer.sex %> </div>
+   </div>
+   </div>
+  
+   <div class="span6">
+   <h4><span class="customer">ID details</span></h4>
+   <div class="row">
+   <div class="span3">
+   <strong>PAN</strong>
+   </div>
+   <div class="span3"> : <%= @customer.PAN %> </div>
+   </div>
+   </div>
+</hr>
+
+
+<h5><%= link_to"Back", customers_path, class: "btn btn-info" %></h5>
+<br></br>
+
+<%= link_to"Edit", edit_customer_path, class: "btn btn-info" %>
+<%= link_to "Delete",customer_path,class: "btn btn-danger",
+      method: :delete, confirm: "Are You Sure?" %>
+ 
