--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -10,8 +10,8 @@
   <% end%>
 </ul>
 <% end%>
-     <%= f.label :code %>
-     <%= f.text_field :code %>
+     <!--<%= f.label :code %>
+     <%= f.text_field :code %>--!>
 
      <%= f.label :first_name %>
      <%= f.text_field :first_name %>
