--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,17 +1,16 @@
 
 <div class="row">
-  <div class="span6 offset3">
+    <div class="span6 offset3">
     <%= form_for(@customer) do |f| %>
-	<% if @customer.errors.any? %>
+    <% if @customer.errors.any? %>
     <h4>customer could not be added:</h4>
-    <ul>
-       <% @customer.errors.full_messages.each do |error|%>
+    <ul> <% @customer.errors.full_messages.each do |error|%>
     <li><%= error%></li>
-  <% end%>
-</ul>
+    <% end%>
+    </ul>
 <% end%>
-     <!--<%= f.label :code %>
-     <%= f.text_field :code %>--!>
+     <%= f.label :code %>
+     <%= f.text_field :code, :disabled => true %>
 
      <%= f.label :first_name %>
      <%= f.text_field :first_name %>
