--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,2 +1,11 @@
 <h1>Edit customer</h1>
+ 
+ <div class="row">
+    <div class="span6 offset3">
+ <%= form_for(@customer) do |f| %>
+ <%= f.label :code %>
+ <%= f.text_field :code,:readonly => true%>
+ <% end %>         
+</div>
+</div>
 <%= render 'form' %>
