--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= will_paginate %>
+
 <h1>Customers </h1>
 
 <%= link_to "Add customer", new_customer_path,class: "btn-primary btn" %> 
@@ -28,8 +28,7 @@
 <br />
 </div>
 
-<%= will_paginate %>
-
+<%= will_paginate @customers %>
 
 
 
