--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -16,6 +16,9 @@
 
      <%= f.label :last_name %>
      <%= f.text_field :last_name %>
+ 
+     <%= f.label :photo %>
+     <%= f.file_field :photo %>
      
      <%= f.label :date_of_birth %>
      <%= f.text_field :date_of_birth %>
