--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -3,7 +3,7 @@
 
 <br> </br>
     <div class = "span6 offset6">
-      <%= link_to"Edit", edit_customer_path, class: "btn btn-info" %>
+      <%= link_to"Edit", edit_customer_path, class: "btn btn-primary" %>
       <%= link_to "Delete",customer_path,class: "btn btn-danger",
       method: :delete, confirm: "Are You Sure?" %>
     </div>
@@ -60,8 +60,11 @@
 
 <h5><%= link_to"Back", customers_path, class: "btn btn-info" %></h5>
 <br></br>
+<div><%= image_tag @customer.photo, :size => "50*50", :crop => :fill %></div>
 
-<%= link_to"Edit", edit_customer_path, class: "btn btn-info" %>
+
+
+<%= link_to"Edit", edit_customer_path, class: "btn btn-primary" %>
 <%= link_to "Delete",customer_path,class: "btn btn-danger",
       method: :delete, confirm: "Are You Sure?" %>
  
