--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,9 @@
+
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "RBF",customers_path, id: "logo" %>
+     <h5>Ruby Benefit Fund<h5>
     </div>
   </div>
-</header
+</header>    
+ <!--<%= link_to "RBF",customers_path, id: "logo" %>-->
