--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -29,8 +29,8 @@
 
 <div class='row'>
 <div class='span6'>
-<div class="string input optional stringish control-group" id="customer_first_name_input"><%= f.label :first_name %><div class="controls"><%= f.text_field :first_name %>
-
+<div class="string input optional stringish control-group" id="customer_first_name_input">
+<%= f.label :first_name %><div class="controls"><%= f.text_field :first_name %>
 </div></div>
 </div>
 
@@ -44,7 +44,6 @@
 <div class='span6'>
 <div class="string input optional stringish control-group" id="customer_date_of_birth_input">
 <%= f.label :date_of_birth %><div class="controls"><%= f.text_field :date_of_birth %>
-
 </div></div>
 </div>
 
@@ -54,7 +53,6 @@
      <%= f.label :sex, "male", :value => "male" %>
      <%= f.radio_button :sex, "female" %>
      <%= f.label :sex, "female", :value => "female" %>
-   
 </div></div>
 </div>
 </div>
@@ -85,7 +83,8 @@
 
 <div class='span6'>
 <div class="string input optional stringish control-group" id="customer_address_input">
-<%= f.label :address %><div class="controls"><%= f.text_field :address, :id => "address", :cols => 5, :rows => 3 %>
+<%= f.label :address %><div class="controls">
+<%= f.text_field :address, :id => "address", :cols => 5, :rows => 3 %>
 </div></div>
 </div>
 </div>
@@ -98,7 +97,6 @@
 <%= f.label :PAN %><div class="controls"><%= f.text_field :PAN %>
 </div></div>
 </div>
-
 <br></br>
 <br></br>
 </hr>
