--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -70,7 +70,7 @@
 </tr>
 
 <tr>
-<td><%= submit_tag "submit", :class => "form_submit"%></td>
+<td><%= submit_tag nil, :class => "form_submit"%></td>
 </tr>
 </table>
 <br />
