--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -23,8 +23,7 @@
 
 <div class='span6'>
 <div class="string input optional stringish control-group" id="customer_status_input">
-<%= f.label :status %><div class="controls"><%= f.text_field :status,:readonly => true %>
-<span class="help-block">auto-updated</span>
+<div class="controls"><br></ br>
 </div></div>
 </div>
 </div>
