with user prof page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,10 @@ color:rgb(196,60,53);
 
 <br></br>
 <h2><%= link_to "Click here to list all customers", customers_path%></h2>
+<br><br/>
+<h2>click here to see/edit user details</h2> 
+<h2><%= link_to "user profile",home_show_path,class: "btn btn-primary" %></h2>
+
 <% else %>
 <div class="offset3 span6">
 <h1 class="sign_in_header">Ruby Benefit Fund</h1>
