--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<br />
 <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
@@ -8,6 +9,12 @@
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
+
+  <div><%= f.label :address %><br />
+  <%= f.text_area :address %></div>
+
+  <div><%= f.label :mobile number %><br />
+  <%= f.text_field :mobile number %></div>  
 
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
