with new styles

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -80,18 +80,13 @@ footer ul li {
 
 /* table */
 
-
-
-th
-{
-border:1px solid #C0C0C0;
-color:blue
+th{
+   border:1px solid #C0C0C0;
+   color:blue
 }
 
-td
-{
-border:1px solid #C0C0C0;
-
+td{
+   border:1px solid #C0C0C0;
 }
 
 /* customer line */
