--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,8 +20,8 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
 
-  <div><%= f.label :Mobile_number %>
-  <%= f.text_field :Mobile_number, :autofocus => true %></div>
+  <div><%= f.label :mobile_number %>
+  <%= f.text_field :mobile_number, :autofocus => true %></div>
 
   
   <div><%= f.label :Address %>
