--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -44,7 +44,7 @@ margin-top:-5px;
 
     Address  <h6><%=text_area_tag "user[Address]",@user.Address,:rows => 2,:cols => 2 %></h6>
 
-    Mobile_number  <h6><%=text_field_tag "user[Mobile_number]",@user.Mobile_number %></h6>
+    mobile_number  <h6><%=text_field_tag "user[mobile_number]",@user.mobile_number %></h6>
 
      <fieldset class="form-actions">
       <button class="btn" type="submit" name="button">Sign up</button>
