--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -20,9 +20,9 @@
 
 <div class="row">
    <div class="span3">
-   <strong>Mobile</strong>
+   <strong>mobile</strong>
    </div>
-   <div class="span3"> - <%= @user.Mobile_number %> </div>
+   <div class="span3"> - <%= @user.mobile_number %> </div>
    </div>
    <br></br>
 
