--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,11 @@
 color:rgb(196,60,53);
 }
 
-
+ 
+#header {display:none;}
+#footer {display:none;}
 </style>
+
 <% if user_signed_in? %>
 
 <br></br>
