--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -17,6 +17,10 @@ border-bottom-right-radius:8px;
 padding: 1em 1em 0em;
 margin-top:-5px;
 }
+
+#header {display:none;}
+#footer {display:none;}
+
 </style>
 
   <section id="flashMsg">
