--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,4 +1,3 @@
-
 <h1> Customers </h1>
 
 <%= form_tag customers_path, :method => 'get'  do %>
@@ -26,13 +25,15 @@
     <tr>
       <td><% for folio in customer.folios %><%= link_to folio.folio_number, folios_path %><% end %></td>
       <td><%= link_to "#{customer.code}" , customer_path(customer)%></td>
-      <td><%= link_to "#{customer.first_name} #{customer.last_name}" , customer_path(customer)%></td>
+      <td><%= link_to "#{customer.first_name} #{customer.last_name}" , customer_path(customer)%>        
       <td><%= customer.address%></td>
       <td><span class="label label-success"><%= customer.status%></span></td>
-      <td><%= image_tag customer.photo, :size => "50x50" %></td>
+      <td><%= image_tag customer.photo, :size => "50x50" , class:"img-polaroid" %></td>
       <td><%= link_to "Edit",edit_customer_path(customer),class: "btn btn-primary" %>
       <%= link_to "Delete",customer_path(customer),class: "btn btn-danger",
-      method: :delete, confirm: "Are You Sure?" %></td>
+      method: :delete, confirm: "Are You Sure?" %>
+
+</td>
     </tr>
  <% end %>
 </table>
