--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Rbf</title>
      <%= stylesheet_link_tag    "application", :media => "all" %>
      <%= javascript_include_tag "application" %>
+     <%= javascript_include_tag "https://js.stripe.com/v1/" %>
      <%= javascript_include_tag "autocomplete-rails.js" %>
      <%= csrf_meta_tags %>
      <%= render 'layouts/shim' %>
@@ -20,8 +21,8 @@
       <div class="alert alert-<%= key %>"><%= value %></div>
       <% end %>
       <%= yield %>
-          <div id="header">
-      <%= render 'layouts/footer' %>
+          <div id="footer">
+
       </div></div>
    </body>
 </html>
