--- a/app/views/savingsdeposits/index.html.erb
+++ b/app/views/savingsdeposits/index.html.erb
@@ -2,7 +2,7 @@
 <h1> savings deposit</h1>
   <br />
      <%= form_tag savingsdeposits_path, :method => 'get'  do %>
-     <%= text_field_tag :search, params[:search], :placeholder => "customer id" %> 
+     <%= text_field_tag :search, params[:search] %> 
      <%= submit_tag "Search", :customer_id => nil, class: "btn btn-primary" %> 
      <%= link_to "New savings deposits", new_savingsdeposit_path,class: "btn-primary btn" %>
      <% end %>
@@ -12,7 +12,6 @@
  
 <table cellpadding = "5px" cellspacing = "5px" width = "100%" class="table table-striped">
   <tr>
-    <th>name</th>
     <th>id</th>
     <th>current balance</th>
     <th>opened on</th>
@@ -22,7 +21,6 @@
  </tr>
     <% @savingsdeposits.each do |savingsdeposit| %>
       <tr>
-      <td><%= link_to "#{savingsdeposit.customer.first_name} #{savingsdeposit.customer.last_name}         #{savingsdeposit.customer.code}" , savingsdeposit_path(savingsdeposit)%></td>
       <td><%= savingsdeposit.customer_id %></td>
       <td><%= savingsdeposit.current_balance %></td>
       <td><%= savingsdeposit.opened_on %></td>
