--- a/app/views/savingsdeposittransactions/new.html.erb
+++ b/app/views/savingsdeposittransactions/new.html.erb
@@ -13,7 +13,8 @@
 
 
 
-<%= f.label :transaction_mode %><%= f.select(:transaction_mode, options_for_select(['credit','debit'])) %>
+<%= f.label :transaction_mode %>
+<%= f.select(:transaction_mode, options_for_select([['',''], ['Credit', 'Credit'], ['Debit', 'Debit']]))%>
 
 <%= f.label :transaction_date %>  <%= f.text_field :transaction_date, :value => Date.today, :readonly => true %>
 
